# polars-root

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
src/polars_root/: __init__.py  functions.py
