[project]
name = "polars-root"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Williams", email = "dmw2174@columbia.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "awkward>=2.8.4",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "uproot>=5.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "ipython>=9.3.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 120
